--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -15,21 +15,27 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.2.8",
     "@nestjs/serve-static": "^4.0.0",
     "@nestjs/swagger": "^7.1.11",
+    "@nestjs/typeorm": "^11.0.0",
     "@nestjs/websockets": "^10.2.8",
     "@tensorflow/tfjs": "^4.13.0",
     "@tensorflow/tfjs-node": "^4.12.0",
     "axios": "^1.5.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "express": "^4.18.2",
     "mime-types": "^2.1.35",
+    "pg": "^8.16.3",
     "python-shell": "^5.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "sharp": "^0.33.5",
+    "typeorm": "^0.3.27",
     "ws": "^8.14.2"
   },
   "devDependencies": {
