--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -7,16 +7,25 @@
     "build": "nest build && cp -R Demo dist/",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "node dist/src/main",
+    "start:prod": "NODE_ENV=production node dist/src/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
-    "prettier:write": "prettier --write src"
+    "prettier:write": "prettier --write src",
+    "migration:generate": "npx typeorm-ts-node-commonjs -d src/database/data-source.ts migration:generate src/database/migrations/$npm_config_name",
+    "migration:run": "npx typeorm-ts-node-commonjs -d src/database/data-source.ts migration:run",
+    "migration:revert": "npx typeorm-ts-node-commonjs -d src/database/data-source.ts migration:revert",
+    "migration:show": "npx typeorm-ts-node-commonjs -d src/database/data-source.ts migration:show",
+    "migration:passport-photos": "ts-node -r tsconfig-paths/register src/database/migrations/migrate-passport-photos-to-mongodb.ts",
+    "seed": "ts-node -r tsconfig-paths/register src/database/seed.ts"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/mongoose": "^11.0.3",
+    "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.2.8",
     "@nestjs/serve-static": "^4.0.0",
@@ -25,11 +34,16 @@
     "@nestjs/websockets": "^10.2.8",
     "@tensorflow/tfjs": "^4.13.0",
     "@tensorflow/tfjs-node": "^4.12.0",
+    "@types/passport-google-oauth20": "^2.0.17",
     "axios": "^1.5.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mime-types": "^2.1.35",
+    "mongoose": "^8.19.3",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "pg": "^8.16.3",
     "python-shell": "^5.0.0",
     "reflect-metadata": "^0.1.13",
