[#16] feat: 세션 라이프사이클 구축 및 고도화

--- a/apps/server/.env.example
+++ b/apps/server/.env.example
@@ -37,9 +37,9 @@ MONGO_DATABASE=ai-pass
 # --------------------------------------------
 # Google Cloud Console에서 OAuth 2.0 클라이언트 ID 생성 필요
 # https://console.cloud.google.com/apis/credentials
-GOOGLE_CLIENT_ID=your_google_client_id_here
-GOOGLE_CLIENT_SECRET=your_google_client_secret_here
-GOOGLE_CALLBACK_URL=http://localhost:5002/auth/google/callback
+GOOGLE_CLIENT_ID=google_client_id
+GOOGLE_CLIENT_SECRET=google_client_secret
+GOOGLE_CALLBACK_URL=http://localhost:5173/api/auth/google/callback
 
 # --------------------------------------------
 # 시드 데이터 설정 (개발용)
@@ -54,3 +54,13 @@ SEED_ADMIN_USERNAME=admin
 # Mac/Windows: host.docker.internal 사용
 # Linux: 172.17.0.1 또는 호스트 IP 사용
 MODEL_SERVER_URL=http://host.docker.internal:5001
+
+# --------------------------------------------
+# 세션 설정
+# --------------------------------------------
+# SESSION_SECRET: 세션 암호화를 위한 시크릿 키
+# 생성 방법: openssl rand -base64 32
+# 값은 노션 댓글 참조
+SESSION_SECRET=your-session-secret-key-here-please-refer-to-notion-comments
+SESSION_MAX_AGE=604800
+FRONTEND_URL=http://localhost:5173
