--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -38,8 +38,10 @@
     "axios": "^1.5.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "connect-pg-simple": "^10.0.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-session": "^1.18.2",
     "mime-types": "^2.1.35",
     "mongoose": "^8.19.3",
     "passport": "^0.7.0",
@@ -57,6 +59,7 @@
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
+    "@types/express-session": "^1.18.2",
     "@types/jest": "^29.5.2",
     "@types/mime-types": "^2.1.1",
     "@types/multer": "^1.4.7",
