--- a/package.json
+++ b/package.json
@@ -27,11 +27,13 @@
     "packages/*"
   ],
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.17",
     "@types/styled-components": "^5.1.34",
     "chalk": "^5.3.0",
     "path-scurry": "^2.0.0",
     "socket.io-client": "^4.8.1",
     "styled-components": "^6.1.13",
+    "tailwindcss": "^4.1.17",
     "vite": "^6.0.2",
     "vite-plugin-svgr": "^4.3.0"
   }
