[#23] feat: AWS S3 및 Presigned URL을 활용한 사진 저장/다운로드 시스템 구 현 및 리팩토링

--- a/docker/server.env.example
+++ b/docker/server.env.example
@@ -14,3 +14,16 @@ GOOGLE_CALLBACK_URL=http://localhost:5002/auth/google/callback
 MONGO_HOST=localhost
 MONGO_PORT=27017
 MONGO_DATABASE=ai-pass
+
+# AWS S3 설정
+# 버킷 이름 (ARN 형식도 지원: arn:aws:s3:::bucket-name 또는 bucket-name)
+AWS_S3_BUCKET=ai-pass
+# 또는 ARN 형식: AWS_S3_BUCKET=arn:aws:s3:::ai-pass
+
+# AWS 리전
+AWS_REGION=ap-northeast-2
+
+# AWS IAM 사용자 자격 증명
+# IAM 사용자: arn:aws:iam::931646335675:user/namu
+AWS_ACCESS_KEY_ID=your_aws_access_key_id_here
+AWS_SECRET_ACCESS_KEY=your_aws_secret_access_key_here
