--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
     "build": "turbo build",
     "dev": "docker-compose -p ai-pass-dev -f docker-compose.dev.yml up -d postgres mongodb && turbo dev",
     "dev:down": "docker-compose -p ai-pass-dev -f docker-compose.dev.yml down",
+    "dev:full": "docker-compose -p ai-pass-dev -f docker-compose.dev.yml up -d --build",
+    "dev:full:logs": "docker-compose -p ai-pass-dev -f docker-compose.dev.yml logs -f",
+    "dev:full:stop": "docker-compose -p ai-pass-dev -f docker-compose.dev.yml down",
+    "dev:ssl": "DOMAIN=localhost ./scripts/generate-ssl.sh",
     "prod": "docker-compose -p ai-pass-prod up -d",
     "prod:down": "docker-compose -p ai-pass-prod down",
     "prod:build": "npm run build && docker-compose -p ai-pass-prod up -d --build",
