--- a/apps/client/tsconfig.app.json
+++ b/apps/client/tsconfig.app.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "composite": true,
+    "composite": false,  // true → false로 변경 (composite 모드 비활성화)
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
     "target": "ES2020",
     "useDefineForClassFields": true,
@@ -9,7 +9,7 @@
     "skipLibCheck": true,
 
     /* Module resolution */
-    "moduleResolution": "node",  // bundler → node
+    "moduleResolution": "bundler",  // node → bundler로 변경 (패키지 exports 지원)
     "resolveJsonModule": true,
     "isolatedModules": true,
     "moduleDetection": "force",
@@ -19,6 +19,12 @@
     /* Import 설정 */
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
+
+    /* Path mapping */
+    "baseUrl": ".",
+    "paths": {
+      "@repo/ui/*": ["../../packages/ui/src/*"]
+    },
 
     /* Linting */
     "strict": true,
