--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -13,12 +13,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "prettier:write": "prettier --write src",
-    "migration:generate": "npx typeorm-ts-node-commonjs -d src/database/data-source.ts migration:generate src/database/migrations/$npm_config_name",
-    "migration:run": "npx typeorm-ts-node-commonjs -d src/database/data-source.ts migration:run",
-    "migration:revert": "npx typeorm-ts-node-commonjs -d src/database/data-source.ts migration:revert",
-    "migration:show": "npx typeorm-ts-node-commonjs -d src/database/data-source.ts migration:show",
-    "migration:hybrid-structure": "ts-node -r tsconfig-paths/register src/database/migrations/migrate-to-hybrid-structure.ts",
-    "seed": "ts-node -r tsconfig-paths/register src/database/seed.ts"
+    "prod": "NODE_ENV=production npm run start:prod"
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.937.0",
